fixed zhu entry

--- a/report/references.bib
+++ b/report/references.bib
@@ -1,8 +1,13 @@
-@misc{zhu,
-	title = "A Group Common Community Conversation - C\textsuperscript{3} Service Across Different Social Networks",
-	author = "Zhongwen Zhu and Martin Cayouette and Francis Pagé",
-	year = 2012
+@inproceedings{zhu,
+  author    = {Zhongwen Zhu and Martin Cayouette and Francis Page},
+  title     = {A group common community conversation - C\({}^{\mbox{3}}\) service across different social networks},
+  booktitle = {23rd {IEEE} International Symposium on Personal, Indoor and Mobile Radio Communications, {PIMRC} 2012, Sydney, Australia, September 9-12, 2012},
+  pages     = {2577--2582},
+  year      = {2012},
+  url       = {https://doi.org/10.1109/PIMRC.2012.6362792},
+  doi       = {10.1109/PIMRC.2012.6362792},
 }
+
 @article{mahajan2013forensic,
   title={Forensic analysis of instant messenger applications on android devices},
   author={Mahajan, Aditya and Dahiya, MS and Sanghvi, HP},
