Report: a little spacing so two sections don't start at the bottom of a page

--- a/report/report.tex
+++ b/report/report.tex
@@ -221,6 +221,7 @@ such as sent and received messages and contact information is stored
 unencrypted on the local storage.
 
 
+\vspace{0.2cm}
 \section{Methods}\label{sec:method}
 
 To investigate what forensically interesting data can be obtained through imo,
@@ -246,6 +247,7 @@ the APK file is \texttt{61972382 e73a4614 0cae38a0 3eae8b63 9f6e42aa 9d47368d
 f207a08b a6f097ae}.
 
 
+\vspace{0.3cm}
 \section{Network Communication Analysis}\label{sec:network}
 
 Upon analysing the pcap file in Wireshark, we found that the regular network
